PackagedApplication API